--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           </div>
         </div>
       </header>
-
+    </div>
     <!--Login form-->
     <div class="modal">
       <div class="modal__overlay" onclick="hideall()"></div>
