Sua 1 chut login

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                   <div class="user-subnav">
                     <ul class="user-subnav__list-admin">
                       <li class="user-subnav__item">Thông tin người dùng</li>
-                      <li class="user-subnav__item">Đăng xuất</li>
+                      <li class="user-subnav__item" onclick="logOut()">Đăng xuất</li>
                     </ul>
                   </div>
                 </li>
