--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,16 @@
     <title>Web Admin</title>
 </head>
 <body>
-    
+    <form action="">
+        <input type="text" name="" id="name placeholder="name">
+        <input type="text" name="" id="price" placeholder="price">
+        <input type="button" value="Submit" >
+    </form>
+    <table>
+        <tr>
+            <td>name</td>
+            <td>price</td>
+        </tr>
+    </table>
 </body>
 </html>
