--- a/admin/pannel.html
+++ b/admin/pannel.html
@@ -167,11 +167,17 @@
         
         <div class="board">
           <table style="width: 100%;">
-            <tr>
-              <td>ID</td>
-              <td>Tên sản phẩm</td>
-              <td>Phân loại</td>
-              <td>Giá</td>
+            <thead>
+              <tr>
+                <td>ID</td>
+                <td>Tên sản phẩm</td>
+                <td>Phân loại</td>
+                <td>Giá</td>
+              </tr>
+            </thead>
+            <tbody id="innerSold">
+
+            </tbody>
           </table>
         </div>
       </div>
