--- a/admin/pannel.html
+++ b/admin/pannel.html
@@ -123,7 +123,7 @@
                 <td>Tên sản phẩm</td>
                 <td>Phân loại</td>
                 <td>Giá</td>
-                <td><div class="addButton" ><a href="" style="text-decoration: none;color: white;"><i class="fa-solid fa-plus" style="margin: 27%;"></i></a></div></td>
+                <td>Tùy chọn</td>
               </tr>
             </thead>
             <tbody id="innerProductList">
@@ -144,10 +144,10 @@
           <table style="width: 100%;">
             <thead>
               <tr>
-                <td>Loại</td>
+                <td>STT</td>
                 <td>Tên đăng nhập</td>
-                <td>Mật khẩu</td>
                 <td>Email</td>
+                <td>Tùy chọn</td>
                 <td></td>
               </tr>
             </thead>
