Them va sua san pham html

--- a/admin/pannel.html
+++ b/admin/pannel.html
@@ -114,7 +114,12 @@
         <div class="Product" >
           <h2>Quản lí sản phẩm</h2>         
         </div>
-
+        <div class="add-edit board">
+          <input type="text" name="Ten" id="" placeholder="Ten">
+          <input type="text" name="" id="" placeholder="Loai">
+          <input type="text" name="" id="" placeholder="Gia">
+          <input type="button" value="Them">
+        </div>
         <div class="board">
           <table style="width:100%">
             <thead>
