--- a/admin/pannel.html
+++ b/admin/pannel.html
@@ -112,7 +112,11 @@
       <!--Quan li san pham-->
       <div id="ProductDisplay">
         <div class="Product" >
-          <h2>Quản lí sản phẩm</h2>         
+          <h2>Quản lí sản phẩm</h2>       
+        </div>
+
+        <div>
+          <input type="text">
         </div>
 
         <div class="board">
