--- a/admin/pannel.html
+++ b/admin/pannel.html
@@ -115,15 +115,14 @@
           <h2>Quản lí sản phẩm</h2>       
         </div>
 
-        <div>
-          <input type="text">
+
+        <div class="add-edit-board">
+          <input type="text" name="Ten" id="" placeholder=" Tên">
+          <input type="text" name="" id="" placeholder=" Loại">
+          <input type="text" name="" id="" placeholder=" Giá">
+          <input class="adminButton" style="width: 50px;" type="button" value=" Thêm">
         </div>
-        <div class="add-edit board">
-          <input type="text" name="Ten" id="" placeholder="Ten">
-          <input type="text" name="" id="" placeholder="Loai">
-          <input type="text" name="" id="" placeholder="Gia">
-          <input type="button" value="Them">
-        </div>
+
         <div class="board">
           <table style="width:100%">
             <thead>
