--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       rel="stylesheet"
       href="./assets/fonts/fontawesome-free-6.2.0-web/css/all.min.css"
     />
+    <link rel="icon" href="https://i.pinimg.com/originals/f5/6b/72/f56b725ec3fb0e519722561313e4cc10.png">
     <link rel="stylesheet" href="./assets/fonts/themify-icons-font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="./assets/css/base.css" />
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -124,7 +125,7 @@
                   <!-- <div class="user-subnav">
                     <ul class="user-subnav__list-admin">
                       <li class="user-subnav__item">Thông tin người dùng</li>
-                      <li class="user-subnav__item" onclick="logOut()">Đăng xuất</li>
+                      <li class="user-subnav__item">Đăng xuất</li>
                     </ul>
                   </div> -->
                 </li>
@@ -189,6 +190,7 @@
                   <div class="header__cart">
                       <i class="header__cart-icon ti-shopping-cart"></i>
                       <span class="header__cart-text">Giỏ hàng</span>
+                      <span class="header__cart-notice">0</span>
                   </div>
                   <div class="header__cart-detail">
                     <!-- No-cart -->
@@ -262,6 +264,7 @@
                           </div>
                         </a>
                       </li> -->
+                      <!-- <div class="header__cart-totalCost">Tổng tiền: Price</div> -->
                     </ul>
                     <footer class="header__cart-footer">
                       <a href="./cart.html" class="header__cart-footer-btn"
@@ -405,43 +408,43 @@
                     Danh mục sản phẩm
                   </h3>
                   <ul class="category-list">
-                    <li class="category-item category-all" onclick="filterProduct('all')">
+                    <li class="category-item category-all">
                       <a class="category-item__link category-item--active ">
                         <i class="category-item-icon fa-solid fa-border-all"></i>
                         <span class="category-item-name">Xem tất cả</span>
                       </a>
                     </li>
-                    <li class="category-item category-lap" onclick="filterProduct('Laptop')">
+                    <li class="category-item category-lap">
                       <a class="category-item__link" >
                         <i class="category-item-icon fa-solid fa-laptop"></i>
                         <span class="category-item-name">Laptop</span>
                       </a>
                     </li>
-                    <li class="category-item category-monitor" onclick="filterProduct('Monitor')">
+                    <li class="category-item category-monitor">
                       <a class="category-item__link">
                         <i class="category-item-icon fa-solid fa-computer"></i>
                         <span class="category-item-name">Màn hình máy tính</span>
                       </a>
                     </li>
-                    <li class="category-item category-headphone" onclick="filterProduct('Headphone')">
+                    <li class="category-item category-headphone">
                       <a class="category-item__link">
                         <i class="category-item-icon fa-solid fa-headphones"></i>
                         <span class="category-item-name">Tai nghe</span>
                       </a>
                     </li>
-                    <li class="category-item category-cosole" onclick="filterProduct('Console')">
+                    <li class="category-item category-console">
                       <a class="category-item__link">
                         <i class="category-item-icon fa-solid fa-gamepad"></i>
                         <span class="category-item-name">Máy chơi game</span>
                       </a>
                     </li>
-                    <li class="category-item category-mouse" onclick="filterProduct('Mouse')">
+                    <li class="category-item category-mouse">
                       <a class="category-item__link">
                         <i class="category-item-icon fa-solid fa-computer-mouse"></i>
                         <span class="category-item-name">Chuột</span>
                       </a>
                     </li>
-                    <li class="category-item category-keyboard" onclick="filterProduct('Keyboard')">
+                    <li class="category-item category-keyboard">
                       <a class="category-item__link">
                         <i class="category-item-icon fa-solid fa-keyboard"></i>
                         <span class="category-item-name">Bàn phím</span>
@@ -568,19 +571,19 @@
                   <div class="product-detail-price">
                     <span class="product-detail-priceCur">28,990,000 &#8363</span>
                     <span class="product-detail-priceOld">32,990,000 &#8363</span>
-                  </div>
+                  </div> -->
                   <div class="product-detail-btn">
                     <button class="product-detail-buy">Mua ngay</button>
-                    <button class="product-detail-addCart">Thêm vào giỏ hàng</button>
+                    <button class="product-detail-addCart">Thêm vào giỏ hàng</button> 
                   </div>
-                </div>
-              </div> -->
+                <!-- </div>
+              </div>  -->
             </div>
           </div>
       </div>
     </div>
 
-    <!-- <footer>
+    <footer>
       <div>
         <nav>
           <div class="grid">
@@ -644,7 +647,7 @@
           </div>
         </nav>
       </div>
-    </footer> -->
+    </footer>
   </body>
   <script src="./index.js"></script>
   <script type="module" src="./LocalProducts.js"></script>
