Sua lai admin.css lan 2

--- a/admin/pannel.html
+++ b/admin/pannel.html
@@ -105,7 +105,7 @@
       </div>
 
       <!--Quan li san pham-->
-      <div class="ProductDisplay">
+      <div id="ProductDisplay">
         <div class="Product" >
           <h2>Quản lí sản phẩm</h2>       
         </div>
@@ -140,7 +140,7 @@
 
 
       <!--Quan li tai khoan-->
-      <div class="AccountDisplay">
+      <div id="AccountDisplay">
         <div class="Account">
           <h2>Quản lí tài khoản</h2> 
         </div>
@@ -165,7 +165,7 @@
 
 
       <!--San pham Da ban-->
-      <div class="SoldDisplay">
+      <div id="SoldDisplay">
         <div class="Sold">
           <h2>Sản phẩm đã bán</h2>
         </div>
