--- a/index.html
+++ b/index.html
@@ -650,6 +650,7 @@
     </footer>
   </body>
   <script src="./index.js"></script>
+  <script type="module" src="./admin.js"></script>
   <script type="module" src="./LocalProducts.js"></script>
   <script type="module" src="./ProductList.js"></script>
   <script src="./login.js"></script>
