--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         </a>
                       </li>
                       <li class="header__cart-item">
-                        <a href="" class="header__notify-link">
+                        <a href="#" class="header__notify-link">
                           <img
                             src="./assets/img/noti-img-2.jpg"
                             alt=""
